<resources>
    <string name="app_name">Dunderbaks</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tap_list">Tap List</string>
    <string name="menu">Menu</string>
    <string name="soups_salads"><![CDATA[Soups & Salads]]></string>
    <string name="appetizers">Appetizers</string>
    <string name="american_appetizers">American Appetizers</string>
    <string name="dinner_without_sides">Dinner without Sides</string>
    <string name="specialty_sandwiches">Specialty Sandwiches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_frag_header">home_frag_header</string>
    <string name="dinner_with_sides">Dinner With Sides</string>
    <string name="side_items">Side Items</string>
    <string name="classic_sandwiches">Classic Sandwiches</string>
    <string name="sausages">Sausages</string>
    <string name="vegetarian_options">Vegetarian Options</string>
    <string name="desserts">Desserts</string>
    <string name="kids_menu">Kids Menu</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="contact">Contact</string>
    <string name="about_us">About Us</string>
    <string name="menu_frag_header">menu_frag_header</string>
    <string name="tap_list_frag_header">tap_list_frag_header</string>
    <string name="dunderbaks_logo">Dunderbaks Logo</string>
    <string name="test">Test</string>
    <string name="jager_schnitzel">Jager Schnitzel</string>
    <string name="dunderbaks_food_item">Dunderbaks Food Item</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
</resources>