<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tap_list"
        android:icon="@drawable/baseline_sports_bar_black_24"
        android:title="@string/tap_list" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/baseline_restaurant_black_24"
        android:title="@string/menu" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/baseline_history_edu_black_24"
        android:title="@string/about_us" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/baseline_contact_phone_black_24"
        android:title="@string/contact" />

</menu>